--- a/src/app/routes/components/inicio/inicio.component.css
+++ b/src/app/routes/components/inicio/inicio.component.css
@@ -10,3 +10,19 @@ nav{
 .btn {
     color: white;
 }
+.card-body {
+    background-color: #0a0b1c;
+    height: 450px;
+}
+.imagen {
+    height: 400px;
+    object-fit: cover;
+}
+.card {
+    text-align: center;
+}
+.btn-selected {
+    background-color: blueviolet;
+    box-shadow: 5px 10px #888888;
+    transform: scale(0.8);
+}
