--- a/src/app/routes/components/inicio/inicio.component.html
+++ b/src/app/routes/components/inicio/inicio.component.html
@@ -6,8 +6,8 @@
 <section class="my-5 mx-5">
     <div class="mb-3 input-group">
         <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-search"></i>
-            <input  class=" form-control"type="Number" id="exampleFormControlInput1"
-                placeholder="Buscar películas y series">
+            <input  class=" form-control" type="text" id="exampleFormControlInput1"
+                placeholder="Buscar películas y series" [(ngModel)]="search" (ngModelChange)="searchMovie()">
         </span>
     </div>
 </section>
@@ -33,7 +33,15 @@
         <h6>(120)</h6>
     </div>
     <!--<app-movie-card></app-movie-card>-->
-    <div class="row row-cols-1 row-cols-sm-4 g-4">
+    <div class="card" style="width: 20%;" *ngIf="movies_series_aux?.name">
+        <img [src]="movies_series_aux?.image" class="card-img-top imagen " [alt]="movies_series_aux?.name">
+        <div class="card-body text-light">
+            <h2>{{movies_series_aux?.name}}</h2>
+            <p class="card-text ">{{movies_series_aux?.description}}</p>
+            <p class="card-text ">RATING: {{movies_series_aux?.rating}}</p>
+        </div>
+    </div>
+    <div *ngIf="!movies_series_aux?.name" class="row row-cols-1 row-cols-sm-4 g-4">
         <div class="col" *ngFor="let movie of movies_series">
             <div *ngIf="movie.category === 'Movie' && filter === 'Películas'">
                 <div class="card">
