--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -13,10 +13,10 @@
                         <a class="nav-link" href="#" routerlink="inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" routerLink="Películas">Películas</a>
+                        <a class="nav-link" href="#" routerLink="peliculas">Películas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" routerlink="Series">Series</a>
+                        <a class="nav-link" href="#" routerlink="series">Series</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" routerlink="ingresar">Ingresar →</a>
