--- a/src/app/routes/components/peliculas/peliculas.component.html
+++ b/src/app/routes/components/peliculas/peliculas.component.html
@@ -1,4 +1,4 @@
-<section class="my-5 mx-5">
+<section class="my-5 mx-5" style="color: white;">
     <h1>Películas</h1>
 </section>
 <section class="my-3 mx-5">
