--- a/src/app/routes/components/dashboard/dashboard.component.html
+++ b/src/app/routes/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-6">
             <div (click)="redirectTo('series')" class="d-flex text-center flex-column custom-contador card">
-                <h4>00</h4>
+                <h4>{{totalSeries}}</h4>
                 <p>Series</p>
             </div>
         </div>
